# Cheeta-MPC

./: CMakeLists.txt  CentoidMPCTest.cpp  CentroidalMPC.cpp  CentroidalMPC.h  LICENSE  NonlinearMPC.h  README.md
GaitPlanner/include/: FootSwingTrajectory.h  Gait.h  GaitScheduler.h
GaitPlanner/src/: FootSwingTrajectory.cpp  Gait.cpp  GaitScheduler.cpp
MPC/include/: CentroidalMPC.h  ConvexMPC.h  LinearMPC.h  MPCLocomotion.h  NonlinearMPC.h  RF_MPC.h  StepAdaption.h
MPC/src/: CentroidalMPC.cpp  ConvexMPC.cpp  MPCLocomotion.cpp  RF_MPC.cpp  StepAdaption.cpp
MPC/test/: CMakeLists.txt  CentoidMPCTest.cpp
Utilities/: ControlParameters.cpp  ControlParameters.h  GamepadCommand.h  IMUTypes.h  Interpolation.h  LegController.h  LinearAlgebra.h  MathTypes.h  Orientation.h  RobotControlParameters.h  SharedMemory.h  SharedMessage.h  filters.h  save_data_to_file.cpp  save_data_to_file.h
